[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["azmovi <azevedoantoniocicero@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.0"
mkdocstrings = {version = "^0.24.0", extras = ["python"], optional = true}
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.3"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"
